fix(layer): layer nav covered start of content

--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -79,7 +79,7 @@ b, strong {
 }
 
 .content-container {
-  padding-top: .1rem;
+  padding-top: $navbar-height + 20;
 }
 
 .content {
